--- a/combateCartas/src/global.scss
+++ b/combateCartas/src/global.scss
@@ -42,7 +42,8 @@
   --color2: #3149a5; // Fondo Panel / Gente Oscura.
   --color3: #0030e1; // Suelo Plato.
   --color4: #5e80ff; // Borde Plato.
-  --color6: #4265e6; // Gente Clara.
+  --color5: #4265e6; // Gente Clara.
+  --color6: #4265e6; // XD.
 }
 
 
