--- a/combateCartas/src/app/nueva-pregunta/nueva-pregunta.component.html
+++ b/combateCartas/src/app/nueva-pregunta/nueva-pregunta.component.html
@@ -1,3 +1,50 @@
-<p>
-  nueva-pregunta works!
-</p>
+
+<!-- ************( Parte de Arriba )************ -->
+<ion-row>
+
+  <ion-col size="6" class="d-flex ion-justify-content-center">
+    <ion-input type="text" placeholder="Respuesta Correcta:" class="input m-1" [(ngModel)]="_respuesta_s"></ion-input>
+  </ion-col>
+
+  <ion-col size="6" class="d-flex ion-justify-content-center">
+    <ion-input type="text" placeholder="Pregunta:" class="input m-1" [(ngModel)]="_pregunta_s"></ion-input>
+  </ion-col>
+
+</ion-row>
+
+
+<!-- ************( Parte de Central )************ -->
+<ion-row>
+
+  <ion-col size="6" class="d-flex ion-justify-content-center">
+    <ion-input type="text" placeholder="Fallo1:" class="input m-1" [(ngModel)]="_fallo1_s"></ion-input>
+  </ion-col>
+
+  <ion-col size="6" class="d-flex ion-justify-content-center">
+    <ion-input type="text" placeholder="Fallo2:" class="input m-1" [(ngModel)]="_fallo2_s"></ion-input>
+  </ion-col>
+
+</ion-row>
+
+
+<!-- ************( Parte de Abajo )************ -->
+<ion-row>
+
+  <ion-col size="6" class="d-flex ion-justify-content-center">
+    <ion-input type="text" placeholder="Fallo3:" class="input m-1" [(ngModel)]="_fallo3_s"></ion-input>
+  </ion-col>
+
+  <ion-col size="6" class="d-flex ion-justify-content-center">
+    <ion-button class="w-100 text-white m-1" (click)="guardar()"><b>Volver al Menu</b></ion-button>
+  </ion-col>
+
+</ion-row>
+
+
+<style>
+  .input
+  {
+    background: var(--color6);
+    border-radius: 5px;
+  }
+</style>
