--- a/combateCartas/src/app/home/home.page.html
+++ b/combateCartas/src/app/home/home.page.html
@@ -86,6 +86,7 @@
                 <ul>
                   <li>Se guarda cuantas preguntas respondiste correctamente</li>
                   <li>Aquí mismo se muestran así que ten cuidado</li>
+                  <li>Se añadirá un pequeño comentario según la cantidad de respuestas</li>
                 </ul>
               </li>
 
@@ -105,9 +106,9 @@
   {
     font-size: 100px;
   }
+
   ion-content
   {
     --background: url('../../assets/fondos/fondoPreguntas.png') no-repeat center center / cover;
   }
-
 </style>
