--- a/combateCartas/src/app/usuario/usuario.component.html
+++ b/combateCartas/src/app/usuario/usuario.component.html
@@ -1,4 +1,16 @@
-<div class="fondoPanel">
-    <h3>{{ _nombre_s }} a respondido: {{ _cantidad_i }}</h3>
-    <p>{{ _comentario_s }}</p>
+<div class="usuarioPanel">
+    <h3><b>{{ _nombre_s }}</b> a acertado: <b>{{ _cantidad_i }}</b> preguntas</h3>
+    <p>Comentario: <b>{{ _comentario_s }}</b></p>
 </div>
+
+
+<style>
+  .usuarioPanel
+  {
+    background-color: var(--color2);
+    border: 4px solid var(--color1);
+    border-radius: 10px;
+    padding: 10px;
+    margin: 5px 4rem 5px 4rem;
+  }
+</style>
