--- a/combateCartas/src/global.scss
+++ b/combateCartas/src/global.scss
@@ -36,7 +36,7 @@
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import '@ionic/angular/css/palettes/dark.system.css';
 
-:root
+:root // Demasiada carga visual.
 {
   --color1: #1d2f72; // Bode Panel.
   --color2: #3149a5; // Fondo Panel / Gente Oscura.
