--- a/combateCartas/src/app/pregunta/pregunta.component.html
+++ b/combateCartas/src/app/pregunta/pregunta.component.html
@@ -3,7 +3,7 @@
 <ion-row>
 
   <ion-col size="6" class="d-flex ion-justify-content-center">
-    <h4>{{ _nombre_s }} => tienes correctas: {{ _cantidad_i }}</h4>
+    <h4><b>{{ _nombre_s }}</b> => tienes correctas: <b>{{ _cantidad_i }}</b></h4>
   </ion-col>
 
   <ion-col size="6">
