--- a/combateCartas/src/app/nueva-pregunta/nueva-pregunta.component.html
+++ b/combateCartas/src/app/nueva-pregunta/nueva-pregunta.component.html
@@ -35,11 +35,14 @@
   </ion-col>
 
   <ion-col size="6" class="d-flex ion-justify-content-center">
-    <ion-button class="w-100 text-white m-1" (click)="guardar()"><b>Volver al Menu</b></ion-button>
+    <ion-button class="w-100 text-white m-1" (click)="guardar()" routerLink="/home"><b>Volver al Menu</b></ion-button>
   </ion-col>
 
 </ion-row>
 
+<ion-col *ngIf="_errores !== ''" class="d-flex ion-justify-content-center">
+  <p class="text-danger">{{ _errores }}</p>
+</ion-col>
 
 <style>
   .input
